# webroamer

./: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/os/back-end/: Cargo.toml
apps/os/back-end/src/: main.rs  state.rs
apps/os/back-end/src/api/: mod.rs  system.rs
apps/os/back-end/src/api/task/: engine.rs  mod.rs  types.rs
apps/os/front-end/: index.html  package.json  tsconfig.json  vite.config.js
apps/os/front-end/public/assets/css/: style.css
apps/os/front-end/src/: App.ts  main.ts
apps/os/front-end/src/api/: system.ts
apps/os/front-end/src/apps/about/: about-pc.ts  about.styles.ts
apps/os/front-end/src/apps/options/: system-options.styles.ts  system-options.ts
apps/os/front-end/src/apps/task-manager/: task-manager.styles.ts  task-manager.ts
apps/os/front-end/src/components/system/: screen.styles.ts  screen.ts  start-menu.ts  status-bar.ts  system-view.ts  task-bar.ts
apps/os/front-end/src/components/window/: system-window.styles.ts  system-window.ts
apps/os/front-end/src/locale/: locale.json
apps/os/front-end/src/shared/services/: font-loader.ts
apps/os/front-end/src/shared/signals/: settings.ts  ui.ts
