[package]
name = "webroamer-back-end"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1.40", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

futures = "0.3"

tower = "0.5"
tower-http = { version = "0.6", features = [
  "cors",
  "trace",
  "compression-full",
] }

sysinfo = "0.33"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1.0"

utoipa = { version = "5.0", features = ["axum_extras"] }

pty-process = { version = "0.4", features = ["async", "tokio"] }

futures-util = "0.3"

sqlx = { version = "0.8", features = [
  "sqlite",
  "runtime-tokio-rustls",
  "chrono",
  "uuid",
  "migrate",
] }

bcrypt = "0.15"

# generate Session Token
rand = "0.8"
uuid = { version = "1.8", features = ["v7"] }
# process db DATETIME
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
time = "0.3"
